fixed spacing on bottom

--- a/project1/css/index.css
+++ b/project1/css/index.css
@@ -71,7 +71,7 @@ h1, h2, h3, h4, h5 {
 
 a {
 	text-decoration: none;
-	color: silver;
+	color: gray;
 }
 
 h1 {
@@ -178,5 +178,5 @@ section.cta img {
 
 footer {
 	text-align: center;
-	margin: 40px;
+	margin: 40px 0px 200px 0px;
 }
